[workspace]
resolver = "2"
members = [
  "rast",
  "rast-agent",
  "rast-c2",
  "rast-cli",
  #"rast-tui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
tokio = { version = "1.21", features = ["macros"] }
tokio-util = { version = "0.7" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
futures-util = { version = "0.3" }
bytes = { version = "1.3" }
async-trait = { version = "0.1" }
thiserror = { version = "2.0.11" }
ulid = { version = "1.1.4", features = ["serde"] }

[profile.release]
lto = true
strip = true
