[package]
name = "rast-agent"
version = "0.1.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "Agent library for Rast C2 & RAT framework."
readme = "README.md"
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
keywords = ["c2", "rat"]
publish = false

[dependencies]
rast = { path = "../rast" } #, features = ["embed-cert"] }
tokio = { workspace = true, features = ["rt", "process"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

rust-embed = { version = "6.4" }
whoami = { version = "1.4" }
