[package]
name = "rast-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
description = "Agent library for Rast C2 & RAT framework."
keywords = ["c2", "rat"]

[dependencies]
rast = { path = "../rast" } #, features = ["embed-cert"] }
tokio = { workspace = true, features = ["rt", "process"] }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
ulid = { workspace = true }

whoami = { version = "1.5" }
