[package]
name = "rast-c2"
version = "0.1.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "C2 server library for Rast C2 & RAT framework."
readme = "README.md"
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
keywords = ["c2", "rat"]
publish = false

[dependencies]
rast = { path = "../rast" }
tokio = { version = "1.21", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "full" ] }
tokio-tungstenite = { version = "0.18" }
futures-util = { version = "0.3" }
bytes = { version = "1.3" }
anyhow = { version = "1.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# Replace with own custom one based off tokio
bidirectional-channel = { version = "0.3" }
