[package]
name = "rast-c2"
version = "0.1.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "C2 server library for Rast C2 & RAT framework."
readme = "README.md"
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
keywords = ["c2", "rat"]
publish = false

[dependencies]
rast = { path = "../rast" }
tokio = { workspace = true, features = ["rt-multi-thread", "process"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
ulid = { workspace = true }
rast-agent = { path = "../rast-agent" }

# Replace with own custom one based off tokio
bidirectional-channel = { version = "0.3" }
