[package]
name = "rast-c2"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
description = "C2 server library for Rast C2 & RAT framework."
keywords = ["c2", "rat"]

[dependencies]
rast = { path = "../rast" }
tokio = { workspace = true, features = ["rt-multi-thread", "process"] }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
rast-agent = { path = "../rast-agent" }

# Replace with own custom one based off tokio
bidirectional-channel = { version = "0.3" }
