[package]
name = "rast-cli"
version = "0.1.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "CLI library for Rast C2 & RAT framework."
readme = "README.md"
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
keywords = ["c2", "rat", "cli"]
publish = false

[dependencies]
rast = { path = "../rast" }
tokio = { version = "1.21", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "full" ] }
anyhow = { version = "1.0" }
crossterm = { version = "0.27" }
shellfish = { version = "0.7", features = [ "async", "tokio" ]}
futures-util = { version = "0.3" }
bytes = { version = "1.3" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
