[package]
name = "rast-cli"
version = "0.1.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "Agent library for Rast C2 & RAT framework."
readme = "README.md"
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
keywords = ["c2", "rat", "cli"]
publish = false

[dependencies]
rast = { path = "../rast" }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
rast-agent = { path = "../rast-agent" }
rast-c2 = { path = "../rast-c2" }

shellfish = { version = "0.10", default-features = true, features = [ "async", "tokio", "rustyline" ]}
