[package]
name = "rast-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
description = "Agent library for Rast C2 & RAT framework."
keywords = ["c2", "rat", "cli"]

[dependencies]
rast = { path = "../rast" }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
rast-agent = { path = "../rast-agent" }
rast-c2 = { path = "../rast-c2" }

shellfish = { version = "0.10", default-features = true, features = [ "async", "tokio", "rustyline" ]}
