[package]
name = "rast"
version = "0.1.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "<description>"
readme = "README.md"
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
keywords = ["c2", "rat"]
publish = false

[dependencies]
config = { version = "0.13" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.21", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "full" ] }
tokio-tungstenite = { version = "0.18" }
async-trait = { version = "0.1" }
glob = { version = "0.3" }
anyhow = { version = "1.0" }
futures-util = { version = "0.3" }
futures-io = { version = "0.3" }
pin-project = "1.0"
bytes = { version = "1.3" }
