[package]
name = "rast"
version = "0.1.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "<description>"
readme = "README.md"
repository = "https://github.com/seqre/rast"
license = "GPL-3.0-or-later"
keywords = ["c2", "rat"]
publish = false

[dependencies]
tokio = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["codec"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
bytes = { workspace = true }

config = { version = "0.15" }
futures-io = { version = "0.3" }
pin-project = "1.1"
quinn = { version = "0.11" }
rustls = { version = "0.23" }
rcgen = { version = "0.13" }
include-flate = { version = "0.3" }

[features]
default = []
embed-cert = []
