[package]
name = "rast"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Main library for Rast C2 & RAT framework."
readme = "../README.md"
keywords = ["c2", "rat"]

[dependencies]
tokio = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["codec"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
bytes = { workspace = true }

config = { version = "0.15" }
futures-io = { version = "0.3" }
pin-project = "1.1"
quinn = { version = "0.11" }
rustls = { version = "0.23" }
rcgen = { version = "0.13" }
include-flate = { version = "0.3" }

[features]
default = []
embed-cert = []
